Add recipe text and searching

--- a/uu_kucharka_maing01-hi/src/bricks/recipes.css
+++ b/uu_kucharka_maing01-hi/src/bricks/recipes.css
@@ -1,16 +1,20 @@
 #uuApp div[data-name="Plus4U5App.TopView"] {
-    background-color: #6c757d !important;
-} 
+  background-color: #6c757d !important;
+}
 
 .page {
-    padding-left: 15px;    
-    padding-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .nadpis {
-    color: darkblue;
+  color: darkblue;
 }
 
 .data {
-    padding-left: 10px;
+  padding-left: 10px;
+}
+
+.pre {
+  white-space: pre-line;
 }
